pygtk-2.24.0
    - Many windows build fixes (Dieter Verfaillie, #371317)
    - Fix mainloop hangs with signalfd (Philippe, Juha, Dieter, #638780, #640738)

pygtk-2.22.0 25-Sep-2010
    - Fix build with Python 2.5 (Chenthill)
    - Add final GTK/GDK-2.22 API (John Stowers)
    - Add missing GDK-2.18 API (John Stowers)

pygtk-2.21.0 15-Jul-2010
    - Bump version number so next stable release will be aligned with the
      final gtk+-2.0 release (gtk+-2.22)
    - Wrap new API added in GTK/GDK 2.21/2.22 (John Stowers)
    - Wrap new API added in GTK/GDK 2.20 (John Stowers)
    - Add forgotten API from GTK/GDK 2.12/14/16/18/20 (John Stowers)

pygtk-2.17.0 26-Dec-2009
    - Some docs improvements (Gian Mario)
    - Wrap new API added in GTK/GDK 2.18 (Gian Mario)
    - Release GIL in several gdk.Pixbuf methods (Paul, #591726)
    - Fix override for gtk.TreeSortable.do_get_sorted_column_id (Paul)
    - Make it possible to implement gtk.TreeSortable to some extent (Paul)
    - Fix wrong gtk.gdk.color_from_hsv definition (Arun Raghavan, #594347)
    - Plug memory leaks in a few Pango Cairo functions (Paul, #599730)
    - Plug a huge leak in gtk.Widget.get_snapshot() (Benjamin Berg, #596612)
    - Undeprecate gtk.Toolbar.(un)set_icon_size() again (Paul)

pygtk-2.16.0 23-Aug-2009
    - Allow to use automake 1.11 (Paolo Borelli)
    - Remove compiler warnings (Gian)
    - Add gtk.gdk.CURRENT_TIME constant (Paul)
    - Fix gtk.IMContext().set_client_window() (Gian)
    - Some docs fix (John Finlay)
    - Fixed invocation of FileChooserDialog in print demo (Pietro Battiston)
    - Some autotools tweaks (Gian)
    - Fix arg parsing format typo for gtk_toggle_button_new (John Finlay)
    - Update some docs to the new 2.16 API (Gian)

pygtk-2.15.2 20-Jun-2009
    - Rename gtk.Statusbar.remove() to gtk.Statusbar.remove_message (Paul)
    - Allow pango.Context creation (Paul, #550855)
    - Make gtk.gdk.Pixbuf.add_alpha accept integers, retaining backward