@@ -1,6 +1,7 @@
 pygtk-2.24.0
     - Many windows build fixes (Dieter Verfaillie, #371317)
     - Fix mainloop hangs with signalfd (Philippe, Juha, Dieter, #638780, #640738)
+    - Fix TypeError when running tests (Pacho, Gilles, Tomeu, Martin, Dieter, #636589)
 
 pygtk-2.22.0 25-Sep-2010
     - Fix build with Python 2.5 (Chenthill)
